Added some changes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 * {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 @theme inline {
